[package]
name = "jac"
version = "0.3.0-alpha.1"
authors = ["Damien Broka <damienbroka@mailbox.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "redis-backend" ]
redis-backend = [ "redis" ]

[dependencies]
serde = { version = "1.0", features = [ "derive", "rc" ] }
serde_json = "1.0"

lazy_static = "1.4.0"

rand = "0.7.3"
base64 = "0.11.0"

redis = { version = "0.15.1", optional = true }

uuid = { version = "0.7.4", features = [ "v4" ] }
derive_more = "0.99"  # FIXME

log = "0.4.10"
